# ikob

./: .dockerignore  .gitignore  Berekeningen - kopie.py  Berekeningen.py  Concurrentieomarbeidsplaatsen.py  Concurrentieominwoners.py  ConfiguratieDefinitie.py  Constantengenerator - kopie.py  Dockerfile  Gewichtenberekenen.py  Gewichtenberekenencombis.py  Gewichtenberekenenenkelscenarios.py  Gewichtenberekenenfiets.py  Gewichtenberekenengeenauto.py  GewichtenberekenengratisOV.py  Gewichtenberekenengratisauto.py  Hoofdprogramma.py  Invoer.py  Inwonersperklasse.py  Ketenskims.py  Ontplooiingsmogelijkhedenechteinwoners.py  Potentiebedrijven.py  README.md  Restgroepentoevoegen.py  Routines.py  Stappen.py  Verdelingovergroepen.py  Verdelingovergroepen2040scen.py  Voorbeeldconfig.json  ikob.spec  ikobconfig.py  ikobrunner.py  pyproject.toml  skimsberekenen.py  skimsberekenenauto.py  skimsberekenenfiets.py  skimsberekenengratisauto.py  skimsberekenengratisov.py  skimsberekenenov.py
.github/workflows/: build-and-test.yml  linting.yml
SEGS/: Arbeidsplaatsen_inkomensklasse2015.csv  Beroepsbevolking2015.csv  Duurparkeren.json  Inwoners_per_klasse2015.csv  Parkeerkosten_Test.csv  Parkeerzoektijd.csv
config/: __init__.py  build.py  validate.py  widgets.py
english/: Chain_and_hubs_calculations.py  README.md
ikob/: Afstandscorrectie.py  Berekeningen.py  Concurrentieomarbeidsplaatsen.py  Concurrentieominwoners.py  Concurrentieominwonersoud.py  ConfiguratieDefinitie.py  ConfiguratieDefinitiefout.py  Constantengenerator.py  Ervarenreistijdberekenen.py  Gewichtenberekenencombis.py  Gewichtenberekenenenkelscenarios.py  Ontplooiingsmogelijkhedenechteinwoners.py  Potentiebedrijven.py  Routines.py  Verdelingovergroepen.py  Verdelingovergroepen2.py  databron.py  datasource.py  ikob.spec  ikobconfig.py  ikobrunner.py  skimsberekenen.py
preprocessing/: IKOB24_ZonesDef.xlsx  IKOB24_ZonesDef_alle_jaren_corr2.xlsx  Matrixomnummeren.py  OVskims-berekenen.py  README.md  Reistijdennaarmatrix_zonder_omnummering.py  input-data-to-ikob-data.docx
scripts/: ikobconfig.bat  ikobrunner.bat  setup.bat
tests/: test_chain_generator.py  test_config.py  test_end_to_end.py  test_group_distribution.py  test_parking_cost_file.py  test_stedelijkheid_converter.py  test_urbanisation_grade_conversion.py
(+1381 files in other folders)
