[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ikob"
version = "0.0.1"
description = "IKOB"
readme = "README.md"
# In version 3.13.0 the GUI fails to launch: https://github.com/Stichting-CROW/ikob/issues/74.
requires-python = ">= 3.12, != 3.13.0"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]
dependencies = [
    "numpy",
    "openpyxl",
    "xlsxwriter",
]

[project.optional-dependencies]
dev = [
    "autopep8",
    "isort",
    "pandas",
    "pytest",
]

deploy = [
    "pyinstaller",
]

[project.scripts]
ikobconfig = "ikob:ikobconfig.main"
ikobrunner = "ikob:ikobrunner.main"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
